{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 22,
  "lineage": "498f7063-c3fb-2d7d-9dd9-1a2322f1c9a2",
  "resources": [
    {
      "module": "module.ec2[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevInstanceAWS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09b89ad3c5769cca2",
            "arn": "arn:aws:ec2:eu-west-2:538215634837:instance/i-07965c4d580911b68",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07965c4d580911b68",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "Test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0699097998b39646a",
            "private_dns": "ip-10-132-1-49.eu-west-2.compute.internal",
            "private_ip": "10.132.1.49",
            "public_dns": "ec2-18-133-182-18.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.182.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-2:538215634837:key/b0dbf98b-7dc9-4585-a82c-72722f8e3e97",
                "volume_id": "vol-0afff1ff8f98cdbf2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077db8df3421a0cf5",
            "tags": {
              "Name": "DevInstanceAWS-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08aeee97be400c8b4"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_external",
            "module.vpc.aws_subnet.dev-subnet-public"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:security-group/sg-08aeee97be400c8b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "94.6.20.160/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08aeee97be400c8b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "94.6.20.160/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20201104162007172100000001",
            "name_prefix": "",
            "owner_id": "538215634837",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_external"
            },
            "timeouts": null,
            "vpc_id": "vpc-01dcbdaa6552b4f74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0324085588c6f4429",
            "domain": "vpc",
            "id": "eipalloc-0621221c1c425c7ec",
            "network_interface": "eni-040d4e9a672ec3780",
            "private_dns": "ip-10-132-2-62.eu-west-2.compute.internal",
            "private_ip": "10.132.2.62",
            "public_dns": "ec2-35-178-99-160.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.99.160",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:internet-gateway/igw-0fcdfcb1fdf1fd11e",
            "id": "igw-0fcdfcb1fdf1fd11e",
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-01dcbdaa6552b4f74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev-ngw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0621221c1c425c7ec",
            "id": "nat-0d6c028fa78375adc",
            "network_interface_id": "eni-040d4e9a672ec3780",
            "private_ip": "10.132.2.62",
            "public_ip": "35.178.99.160",
            "subnet_id": "subnet-0da4945ce018493d0",
            "tags": {
              "Name": "dev-ngw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.dev-subnet-private",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-private-crt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b1f599c88b3006d3",
            "owner_id": "538215634837",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-private-rt"
            },
            "vpc_id": "vpc-01dcbdaa6552b4f74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-public-crt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b2bd2115f8452ffb",
            "owner_id": "538215634837",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "94.6.20.160/32",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fcdfcb1fdf1fd11e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "vpc_id": "vpc-01dcbdaa6552b4f74"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev-igw",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-crta-private-subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a905cf9554aff7f",
            "route_table_id": "rtb-0b1f599c88b3006d3",
            "subnet_id": "subnet-0da4945ce018493d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.dev-private-crt",
            "module.vpc.aws_subnet.dev-subnet-private",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f21957e768588cae",
            "route_table_id": "rtb-0b1f599c88b3006d3",
            "subnet_id": "subnet-0c864dc35c28ce252"
          },
          "dependencies": [
            "module.vpc.aws_route_table.dev-private-crt",
            "module.vpc.aws_subnet.dev-subnet-private",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-crta-public-subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0807ff5bad0b93aca",
            "route_table_id": "rtb-0b2bd2115f8452ffb",
            "subnet_id": "subnet-077db8df3421a0cf5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev-igw",
            "module.vpc.aws_route_table.dev-public-crt",
            "module.vpc.aws_subnet.dev-subnet-public",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f317218ca780217",
            "route_table_id": "rtb-0b2bd2115f8452ffb",
            "subnet_id": "subnet-0b1c5718854f9e680"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev-igw",
            "module.vpc.aws_route_table.dev-public-crt",
            "module.vpc.aws_subnet.dev-subnet-public",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet-private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:subnet/subnet-0da4945ce018493d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.132.2.0/26",
            "id": "subnet-0da4945ce018493d0",
            "map_public_ip_on_launch": false,
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-subnet-private-1"
            },
            "vpc_id": "vpc-01dcbdaa6552b4f74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:subnet/subnet-0c864dc35c28ce252",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.132.2.64/26",
            "id": "subnet-0c864dc35c28ce252",
            "map_public_ip_on_launch": false,
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-subnet-private-2"
            },
            "vpc_id": "vpc-01dcbdaa6552b4f74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet-public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:subnet/subnet-077db8df3421a0cf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.132.1.0/26",
            "id": "subnet-077db8df3421a0cf5",
            "map_public_ip_on_launch": true,
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-subnet-public-1"
            },
            "vpc_id": "vpc-01dcbdaa6552b4f74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:subnet/subnet-0b1c5718854f9e680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.132.1.64/26",
            "id": "subnet-0b1c5718854f9e680",
            "map_public_ip_on_launch": true,
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-subnet-public-2"
            },
            "vpc_id": "vpc-01dcbdaa6552b4f74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:vpc/vpc-01dcbdaa6552b4f74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.132.0.0/21",
            "default_network_acl_id": "acl-0a221d80a04c2ff2b",
            "default_route_table_id": "rtb-0ef2115290dbb3fda",
            "default_security_group_id": "sg-0107b761c4fab03a2",
            "dhcp_options_id": "dopt-c390b9ab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01dcbdaa6552b4f74",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ef2115290dbb3fda",
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}